# learning-companion

./: .coderabbit.yaml  .env.example  .gitattributes  .gitignore  .markdownlint-cli2.jsonc  .shellcheckrc  ARCHITECTURE.md  CLAUDE.md  README.md  pyproject.toml
.claude/: CLAUDE-auto-progress.md  settings.json
.claude/agents/: code-reviewer.md  doc-reviewer.md  planner.md  prt-code-reviewer.md  prt-code-simplifier.md  prt-comment-analyzer.md  prt-silent-failure-hunter.md  prt-test-analyzer.md  prt-type-design-analyzer.md  test-runner.md
.claude/commands/: review-pr.md
.claude/rules/: coding-standards.md  doc-style.md  git-flow.md  github-comments.md  quality-gate.md  spec-driven.md
.claude/scripts/: destructive-command-guard.sh  journal-rolling.py  leader-guard.sh  notify.sh  precompact_rule.sh
.claude/team-themes/: GUIDELINES.md  config.json
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: auto-fix.yml  (+7 more)
config/: assistant.yaml  mcp_servers.json
scripts/: bot_start.sh  check_mermaid_compat.py  collect_evaluation_data.py  embedding_prefix_comparison.py  eval_data_config.json  parameter_sweep.py  test_delivery.py  test_weather_manual.py
src/: bot_manager.py  cli.py  compat.py  main.py  process_guard.py
tests/: test_bm25_index.py  test_bot_manager.py  test_chat_service.py  test_chat_with_tools.py  test_chunker.py  test_config.py  test_content_detector.py  test_db.py  test_e2e_dummy.py  test_embedding.py  test_feed_collector.py  test_heading_chunker.py  test_hybrid_search.py  test_llm.py  test_mcp_client_manager.py  test_message_router.py  test_messaging_port.py  test_ogp_extractor.py  test_process_guard.py  test_rag_cli.py  test_rag_evaluation.py  test_rag_knowledge.py  test_rag_knowledge_hybrid.py  test_rag_mcp_server.py  test_robots_txt.py  test_safe_browsing.py  test_scheduler.py  test_slack_feed_handlers.py  test_slack_handlers.py  test_slack_mrkdwn.py  test_slack_rag_handlers.py  test_summarizer.py  test_table_chunker.py  test_thread_history.py  test_topic_recommender.py  test_user_profiler.py  test_vector_store.py  test_weather_server.py  test_web_crawler.py
(+238 files in other folders)
