[project]
name = "learning-companion"
version = "0.1.0"
description = "Slack AI learning assistant with intelligent LLM routing"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "slack-bolt>=1.18,<2",
    "openai>=1.12,<2",
    "anthropic>=0.18,<1",
    "pydantic>=2.6,<3",
    "pydantic-settings>=2.1,<3",
    "python-dotenv>=1.0,<2",
    "sqlalchemy>=2.0,<3",
    "aiosqlite>=0.20,<1",
    "feedparser>=6.0,<7",
    "apscheduler>=3.10,<4",
    "aiohttp>=3.9,<4",
    "pyyaml>=6.0,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<1",
    "ruff>=0.2",
    "mypy>=1.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
